/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/tutorial_java_projects.html
 */

buildscript {
  repositories {
    mavenCentral()
    maven {
      setUrl("https://plugins.gradle.org/m2/")
    }
  }
}

plugins {
  // Apply the java plugin to add support for Java
  id 'java'

  // Apply the gradle plugin to add support for Gradle
  id 'groovy'

  // Apply the application plugin to add support for building a CLI application.
  id 'application'

  // JavaFX
  id "org.openjfx.javafxplugin" version "0.1.0"

  // Spotless for code formatting
  id "com.diffplug.spotless" version "6.22.0"

  // Code coverage
  id 'jacoco'

  id "org.jetbrains.kotlin.jvm" version "1.9.20"

  // Linter
  id 'io.gitlab.arturbosch.detekt' version '1.23.1'
}

// 変数定義

// ソースコードに埋め込むコミットハッシュ値。デフォルト値はdevで、CIでのビルド時
// に値を差し替える。
def commitHash = 'dev'

def VERSION_SOURCE_FILE = 'application.properties'
def SRC_FILE = 'template/' + VERSION_SOURCE_FILE
def DST_DIR = 'src/main/resources/com/jiro4989/tkfm/properties'
def DST_FILE = DST_DIR + '/' + VERSION_SOURCE_FILE

def LIB_DIR = './lib'

def APP_MODS = [
  'javafx.base',
  'javafx.controls',
  'javafx.swing',
  'javafx.graphics',
  'javafx.fxml',
]

def jmodsDir = './jmods/javafx-jmods-11.0.2'
def CUSTOM_JRE_DIR = 'jre'

repositories {
  mavenCentral()
}

dependencies {
  // This dependency is used by the application.
  implementation 'com.google.guava:guava:32.1.3-jre'

  // Use JUnit test framework
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
  testImplementation 'org.junit.platform:junit-platform-launcher:1.10.0'
  testImplementation "org.testfx:testfx-junit5:4.0.17"

  // JavaFX
  implementation "org.openjfx:javafx-fxml:21.0.1"
  implementation "org.openjfx:javafx-base:21.0.1"
  implementation "org.openjfx:javafx-controls:21.0.1"
  implementation "org.openjfx:javafx-graphics:21.0.1"
  implementation "org.openjfx:javafx-swing:21.0.1"

  implementation platform('org.jetbrains.kotlin:kotlin-bom')
  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
  testImplementation "org.jetbrains.kotlin:kotlin-test"
  testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
}

sourceCompatibility = 17
targetCompatibility = 17

application {
  // Define the main class for the application.
  getMainClass().set('com.jiro4989.tkfm.Main')
}

test {
  useJUnitPlatform()
  jacoco {
    destinationFile = file("${buildDir}/jacoco/test.exec")
  }
}

compileJava {
  options.encoding = 'UTF-8'
}

compileKotlin {
  kotlinOptions.jvmTarget = "17"
}

compileTestKotlin {
  kotlinOptions.jvmTarget = "17"
}

javafx {
  modules = [
    'javafx.controls',
    'javafx.fxml',
    'javafx.swing'
  ]
}

jar {
  manifest {
    attributes 'Main-Class': 'com.jiro4989.tkfm.Main'
  }

  archiveBaseName = 'tkfm'

  from {
    configurations.compileClasspath.collect {
      it.isDirectory() ? it : zipTree(it)
    }
  }
  duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.register('junitPlatformJacocoReport', JacocoReport) {
  group = "Verification"
  description = "Jacocoを使ってテストのレポートを取得する"

  sourceSets sourceSets.main
  executionData test
}

jacocoTestReport {
  reports {
    xml.required = true
    html.required = true
  }
}

spotless {
  java {
    googleJavaFormat('1.13.0')

    trimTrailingWhitespace()
    endWithNewline()
    removeUnusedImports()
  }

  kotlin {
    ktfmt('0.15')
  }

  groovyGradle {
    target '*.gradle'
    greclipse().configFile("$rootDir/greclipse.properties")
  }
}

detekt {
  // Version of Detekt that will be used. When unspecified the latest detekt
  // version found will be used. Override to stay on the same version.
  toolVersion = "1.19.0"

  // Define the detekt configuration(s) you want to use.
  // Defaults to the default detekt configuration.
  config = files("detekt.yml")

  //
  // // Specifying a baseline file. All findings stored in this file in subsequent runs of detekt.
  // baseline = file("path/to/baseline.xml")

  // Disables all default detekt rulesets and will only run detekt with custom rules
  // defined in plugins passed in with `detektPlugins` configuration. `false` by default.
  disableDefaultRuleSets = false

  // Adds debug output during task execution. `false` by default.
  debug = false

  // If set to `true` the build does not fail when the
  // maxIssues count was reached. Defaults to `false`.
  ignoreFailures = false

  // Android: Don't create tasks for the specified build types (e.g. "release")
  ignoredBuildTypes = ["release"]

  // Android: Don't create tasks for the specified build flavor (e.g. "production")
  ignoredFlavors = ["production"]

  // Android: Don't create tasks for the specified build variants (e.g. "productionRelease")
  ignoredVariants = ["productionRelease"]

  // Specify the base path for file paths in the formatted reports.
  // If not set, all file paths reported will be absolute file path.
  basePath = projectDir
}

tasks.named("detekt").configure {
  dependsOn 'spotlessApply'
  reports {
    xml.required.set(false)
    sarif.required.set(false)

    html.required.set(true)
    html.outputLocation.set(file("build/reports/detekt.html"))

    txt.required.set(true)
    txt.outputLocation.set(file("build/reports/detekt.txt"))
  }
}

version = '0.0.0-SNAPSHOT'
if (project.hasProperty('CI_VERSION')) {
  version = CI_VERSION
}
if (project.hasProperty('CI_COMMIT_HASH')) {
  commitHash = CI_COMMIT_HASH
}

// Version.javaにバージョン番号とコミットハッシュを埋め込んでコピーする。
//
// 環境変数を指定せずにビルドするとdevがデフォルトでセットされる。
// CIでのビルド時にはタグ番号とコミットハッシュが埋め込まれる。
// こうすることでタグ番号の二重管理を防ぐことができる。
tasks.register('versionSet', Copy) {
  group = "Build"
  description = "ソースコードにビルド時のタグバージョンとコミットハッシュ値を埋め込む"

  from SRC_FILE
  into DST_DIR
  expand(version: version, commitHash: commitHash)

  doFirst {
    delete DST_FILE
  }
}

tasks.register('cleanDependencies') {
  group = "Build"
  description = "依存ライブラリを削除する"

  doLast {
    delete LIB_DIR
  }
}

// dependenciesで取得したjarファイルをlib配下にコピーする。
//
// runAppで実行するときにライブラリのパスを指定するために使用する。
tasks.register('dumpDependencies') {
  group = "Build"
  description = "依存ライブラリjarをlib配下にコピーする"

  doLast {
    configurations.compileClasspath.each {
      def jarFile = it.absolutePath
      copy {
        from jarFile
        into LIB_DIR
      }
    }
  }
}

tasks.register('runApp', Exec) {
  group = "Application"
  description = "アプリケーションを起動する"

  commandLine 'java',
    '--module-path', LIB_DIR,
    '--add-modules', APP_MODS.join(','),
    '-jar', "build/libs/tkfm-${version}.jar"
}

if (project.hasProperty('CI_JMODS_DIR')) {
  jmodsDir = CI_JMODS_DIR
}

tasks.register('cleanCustomJRE') {
  group = "Build"
  description = "生成したカスタムJREを削除する"

  doLast {
    delete CUSTOM_JRE_DIR
  }
}

// カスタムJREを作成する。
tasks.register('jlink', Exec) {
  group = "Build"
  description = "jlinkを使ってカスタムJREを作成する"

  commandLine 'jlink',
    '--module-path', jmodsDir,
    '--add-modules', APP_MODS.join(','),
    '--compress=2',
    '--output', CUSTOM_JRE_DIR
}

// 実行順序の明示
spotlessApply.dependsOn(['clean'])
versionSet.dependsOn(['spotlessApply'])
test.dependsOn('spotlessApply')
// detekt.dependsOn('spotlessApply')
processResources.dependsOn(['versionSet'])
compileJava.dependsOn(['processResources'])
compileKotlin.dependsOn(['processResources'])
jacocoTestReport.dependsOn(['test'])

dumpDependencies.dependsOn(['cleanDependencies'])
runApp.dependsOn(['dumpDependencies'])

jlink.dependsOn(['cleanCustomJRE'])
